# crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
ghcrawler/: __init__.py  cli.py  crawler.py  parsers.py  selectors.py
tests/: test_cli.py  test_crawler.py  test_parsers.py
